Added base sheets and registered actor base class

--- a/system/templates/actors/parts/general_information.html
+++ b/system/templates/actors/parts/general_information.html
@@ -1,7 +1,7 @@
 <section class="general_information">
     <div>
-        <label class="property-label">Name</label>
-        <input class="property-input" type="text" name="name" value="{{actor.name}}">
+        <label class="property-label">Names</label>
+        <input class="property-input" name="name" type="text" value="{{actor.name}}">
     </div>
     <div>
         <label class="property-label">{{ localize "FATEx.Sheet.Description" }}</label>
