--- a/system/fatex.css
+++ b/system/fatex.css
@@ -1,3 +1,124 @@
+.desk {
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
+  gap: 1px 1px;
+  grid-template-areas: "header-left header-right" "left right" "footer-left footer-right";
+}
 
+.desk__artwork {
+  grid-area: header-left;
+}
+
+.desk__artwork {
+  grid-area: header-right;
+}
+
+.sheet.fatex .window-content {
+  padding: 0;
+  background: white;
+}
+.sheet.fatex img {
+  border: 0;
+}
+.sheet.fatex input {
+  border: 0 !important;
+  background: transparent !important;
+  font-size: 23px !important;
+  height: auto !important;
+}
+
+.fatex-artwork {
+  height: 100%;
+  min-height: 250px;
+  position: relative;
+  padding: 10px;
+  display: flex;
+}
+
+.fatex-artwork--image {
+  position: relative;
+  width: 100%;
+  background-size: cover;
+  background-position: center center;
+  border: 1px #2d2d2d solid;
+  position: relative;
+}
+.fatex-artwork--image:after {
+  content: "";
+  position: absolute;
+  border: solid #2d2d2d;
+  background: white;
+  width: 10%;
+  height: 10%;
+  border-width: 1px 1px 0 0;
+  bottom: -1px;
+  left: -1px;
+}
+
+.fatex-artwork--handler {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  opacity: 0;
+  cursor: pointer;
+}
+
+.fatex-information {
+  height: 100%;
+  position: relative;
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+}
+
+.fatex-information__name {
+  padding: 5px;
+  margin-bottom: 20px;
+  border: 1px #2d2d2d solid;
+  position: relative;
+}
+.fatex-information__name:after {
+  content: "";
+  position: absolute;
+  border: solid #2d2d2d;
+  background: white;
+  width: 20px;
+  height: 20px;
+  border-width: 1px 0 0 1px;
+  position: absolute;
+  bottom: -1px;
+  right: -1px;
+}
+
+.fatex-information__name__input {
+  font-size: 23px !important;
+}
+
+.fatex-information__description {
+  flex-grow: 1;
+  padding: 5px;
+  border: 1px #2d2d2d solid;
+  position: relative;
+}
+.fatex-information__description:after {
+  content: "";
+  position: absolute;
+  border: solid #2d2d2d;
+  background: white;
+  width: 20px;
+  height: 20px;
+  border-width: 1px 0 0 1px;
+  position: absolute;
+  bottom: -1px;
+  right: -1px;
+}
+
+.fatex-information__description__input {
+  min-height: 100%;
+  outline: 0;
+}
 
 /*# sourceMappingURL=fatex.css.map */
