--- a/style/mixins/cutoff.scss
+++ b/style/mixins/cutoff.scss
@@ -1,26 +1,3 @@
-@mixin cutoff($position: "left", $width: $cutoff-width, $height: $cutoff-height ) {
-    position: relative;
-
-    &:after {
-        content: "";
-        position: absolute;
-        border: solid $component-border-color;
-        background: $sheet-background;
-        width: $width;
-        height: $height;
-
-        @if $position == "left" {
-            border-width: $component-border-size $component-border-size 0 0;
-            bottom: -$component-border-size;
-            left: -$component-border-size;
-        }
-
-        @if $position != "left" {
-            border-width: $component-border-size 0 0 $component-border-size;
-            position: absolute;
-            bottom: -$component-border-size;
-            right: -$component-border-size;
-        }
-    }
-
+@mixin cutoff($size: 10px) {
+  clip-path: polygon(0 $size, $size 0%, 100% 0%, 100% 0%, 100% calc(100% - #{$size}), calc(100% - #{$size}) 100%, 0 100%, 0 100%);
 }
