--- a/style/settings.scss
+++ b/style/settings.scss
@@ -1,9 +1,8 @@
-$sheet-background: white;
+$sheet-background: #F5F5F5;
 
 $component-padding: 10px;
-$component-border-size: 1px;
-$component-border-color: rgb(157, 157, 157);
+$component-border-size: 0px;
+$component-border-color: rgb(31, 31, 31);
 $component-border-style: solid;
 
-$cutoff-width: 10%;
-$cutoff-height: 10%;
+$header-background: rgba(60, 60, 60, 1);
