--- a/style/components/artwork/artwork.scss
+++ b/style/components/artwork/artwork.scss
@@ -1,28 +1,25 @@
 .fatex-artwork {
-    height: 100%;
-    min-height: 250px;
-
     position: relative;
     padding: $component-padding;
-    display: flex;
 }
 
 .fatex-artwork--image {
-    position: relative;
     width: 100%;
+    height: 200px;
     background-size: cover;
     background-position: center center;
 
-    border: $component-border-size $component-border-color $component-border-style;
-    @include cutoff();
+    @include cutoff(25px);
 }
 
 .fatex-artwork--handler {
     position: absolute;
     width: 100%;
     height: 100%;
+
     top: 0;
     left: 0;
-    opacity: 0;
+
     cursor: pointer;
+    opacity: 0;
 }
