--- a/style/components/sheet/sheet.scss
+++ b/style/components/sheet/sheet.scss
@@ -1,4 +1,8 @@
 .sheet.fatex {
+    form {
+        max-height: 100%;
+    }
+
     .window-content {
         padding: 0;
         background: $sheet-background;
