--- a/system/fatex.css
+++ b/system/fatex.css
@@ -1,22 +1,49 @@
 .desk {
   display: grid;
-  grid-template-columns: 2fr 1fr;
-  grid-template-rows: 1fr 1fr 1fr;
-  gap: 1px 1px;
-  grid-template-areas: "header-left header-right" "left right" "footer-left footer-right";
+  grid-template-columns: 1fr;
+  grid-template-rows: min-content minmax(100px, 100%) min-content;
+  grid-template-areas: "header" "main" "footer";
+  height: 100%;
+  max-height: 100%;
 }
 
-.desk__artwork {
-  grid-area: header-left;
+.desk__header {
+  grid-area: header;
+  box-shadow: 0 2px 15px 0 #3c3c3c;
+  background: #3c3c3c;
+}
+.desk__header > .desk__header--content {
+  display: flex;
+}
+.desk__header .desk__header__left {
+  flex-grow: 1;
 }
 
-.desk__artwork {
-  grid-area: header-right;
+.desk__main {
+  grid-area: main;
+  overflow-y: auto;
+}
+.desk__main > .desk__main--content {
+  display: flex;
+  height: 100%;
+}
+.desk__main .desk__left {
+  flex: 2;
+}
+.desk__main .desk__right {
+  flex: 1;
 }
 
+.desk__footer {
+  grid-area: footer;
+}
+
+.sheet.fatex form {
+  max-height: 100%;
+}
 .sheet.fatex .window-content {
   padding: 0;
-  background: white;
+  background: #F5F5F5;
 }
 .sheet.fatex img {
   border: 0;
@@ -29,31 +56,16 @@
 }
 
 .fatex-artwork {
-  height: 100%;
-  min-height: 250px;
   position: relative;
   padding: 10px;
-  display: flex;
 }
 
 .fatex-artwork--image {
-  position: relative;
   width: 100%;
+  height: 200px;
   background-size: cover;
   background-position: center center;
-  border: 1px #2d2d2d solid;
-  position: relative;
-}
-.fatex-artwork--image:after {
-  content: "";
-  position: absolute;
-  border: solid #2d2d2d;
-  background: white;
-  width: 10%;
-  height: 10%;
-  border-width: 1px 1px 0 0;
-  bottom: -1px;
-  left: -1px;
+  clip-path: polygon(0 25px, 25px 0%, 100% 0%, 100% 0%, 100% calc(100% - 25px), calc(100% - 25px) 100%, 0 100%, 0 100%);
 }
 
 .fatex-artwork--handler {
@@ -62,58 +74,30 @@
   height: 100%;
   top: 0;
   left: 0;
-  opacity: 0;
   cursor: pointer;
+  opacity: 0;
 }
 
 .fatex-information {
   height: 100%;
   position: relative;
   padding: 10px;
-  display: flex;
-  flex-direction: column;
 }
 
 .fatex-information__name {
   padding: 5px;
   margin-bottom: 20px;
-  border: 1px #2d2d2d solid;
-  position: relative;
-}
-.fatex-information__name:after {
-  content: "";
-  position: absolute;
-  border: solid #2d2d2d;
-  background: white;
-  width: 20px;
-  height: 20px;
-  border-width: 1px 0 0 1px;
-  position: absolute;
-  bottom: -1px;
-  right: -1px;
 }
 
 .fatex-information__name__input {
+  color: white !important;
   font-size: 23px !important;
 }
 
 .fatex-information__description {
   flex-grow: 1;
   padding: 5px;
-  border: 1px #2d2d2d solid;
-  position: relative;
-}
-.fatex-information__description:after {
-  content: "";
-  position: absolute;
-  border: solid #2d2d2d;
-  background: white;
-  width: 20px;
-  height: 20px;
-  border-width: 1px 0 0 1px;
-  position: absolute;
-  bottom: -1px;
-  right: -1px;
+  border: 0px #1f1f1f solid;
 }
 
 .fatex-information__description__input {
