--- a/system/fatex.css
+++ b/system/fatex.css
@@ -1,3 +1,49 @@
+@font-face {
+  font-family: 'Montserrat';
+  src: url("assets/fonts/Montserrat-Regular.otf");
+}
+@font-face {
+  font-family: 'Montserrat';
+  src: url("assets/fonts/Montserrat-Italic.otf");
+  font-style: italic;
+}
+@font-face {
+  font-family: 'Montserrat';
+  src: url("assets/fonts/Montserrat-Light.otf");
+  font-weight: 300;
+}
+@font-face {
+  font-family: 'Montserrat';
+  src: url("assets/fonts/Montserrat-LightItalic.otf");
+  font-style: italic;
+  font-weight: 300;
+}
+@font-face {
+  font-family: 'Montserrat';
+  src: url("assets/fonts/Montserrat-Bold.otf");
+  font-weight: bold;
+}
+@font-face {
+  font-family: 'Montserrat';
+  src: url("assets/fonts/Montserrat-BoldItalic.otf");
+  font-style: italic;
+  font-weight: bold;
+}
+@font-face {
+  font-family: 'Montserrat';
+  src: url("assets/fonts/Montserrat-Black.otf");
+  font-weight: 900;
+}
+@font-face {
+  font-family: 'Montserrat';
+  src: url("assets/fonts/Montserrat-BlackItalic.otf");
+  font-style: italic;
+  font-weight: 900;
+}
+@font-face {
+  font-family: 'Fate Core';
+  src: url("assets/fonts/Fate Core Font.ttf");
+}
 .desk {
   display: grid;
   grid-template-columns: 1fr;
@@ -9,14 +55,8 @@
 
 .desk__header {
   grid-area: header;
-  box-shadow: 0 2px 15px 0 #3c3c3c;
-  background: #3c3c3c;
-}
-.desk__header > .desk__header--content {
-  display: flex;
-}
-.desk__header .desk__header__left {
-  flex-grow: 1;
+  box-shadow: 0 2px 15px 0 #2f3542;
+  background: #2f3542;
 }
 
 .desk__main {
@@ -38,29 +78,31 @@
   grid-area: footer;
 }
 
+.sheet.fatex {
+  font-family: "Montserrat", sans-serif;
+}
 .sheet.fatex form {
   max-height: 100%;
 }
 .sheet.fatex .window-content {
   padding: 0;
-  background: #F5F5F5;
+  background: #f1f2f6;
 }
 .sheet.fatex img {
   border: 0;
 }
-.sheet.fatex input {
-  border: 0 !important;
-  background: transparent !important;
-  font-size: 23px !important;
-  height: auto !important;
+.sheet.fatex input[type="text"] {
+  border: 0;
+  background: transparent;
+  height: auto;
 }
 
-.fatex-artwork {
+.fatex__artwork {
   position: relative;
   padding: 10px;
 }
 
-.fatex-artwork--image {
+.fatex__artwork--image {
   width: 100%;
   height: 200px;
   background-size: cover;
@@ -68,7 +110,7 @@
   clip-path: polygon(0 25px, 25px 0%, 100% 0%, 100% 0%, 100% calc(100% - 25px), calc(100% - 25px) 100%, 0 100%, 0 100%);
 }
 
-.fatex-artwork--handler {
+.fatex__artwork--handler {
   position: absolute;
   width: 100%;
   height: 100%;
@@ -78,31 +120,114 @@
   opacity: 0;
 }
 
-.fatex-information {
-  height: 100%;
-  position: relative;
+.fatex__stress {
   padding: 10px;
 }
 
-.fatex-information__name {
-  padding: 5px;
-  margin-bottom: 20px;
+.fatex__stress__track + .fatex__stress__track {
+  margin-top: 20px;
 }
 
-.fatex-information__name__input {
-  color: white !important;
-  font-size: 23px !important;
+.fatex__stress__track__headline {
+  background: #2f3542;
+  color: #ffffff;
+  padding: 5px 30px 5px 20px;
+  clip-path: polygon(0 15px, 15px 0%, 100% 0%, 100% 0%, 100% calc(100% - 15px), calc(100% - 15px) 100%, 0 100%, 0 100%);
+  position: relative;
+}
+.fatex__stress__track__headline:hover .fatex__stress__track__headline__settings {
+  opacity: 1;
 }
 
-.fatex-information__description {
-  flex-grow: 1;
-  padding: 5px;
-  border: 0px #1f1f1f solid;
+.fatex__stress__track__headline__settings {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  right: 10px;
+  opacity: 0;
+  transition: opacity 0.3s;
+  cursor: pointer;
 }
 
-.fatex-information__description__input {
-  min-height: 100%;
-  outline: 0;
+.fatex__stress__track__item__checkbox {
+  position: absolute;
+  opacity: 0;
+  right: -5000px;
+}
+
+.fatex__stress__track__item__box {
+  width: 30px;
+  height: 30px;
+  border: 5px solid #2f3542;
+}
+
+.fatex__header {
+  height: 100%;
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+}
+.fatex__header input[type="text"].fatex__header__name__input,
+.fatex__header input[type="text"].fatex__header__fp__input,
+.fatex__header input[type="text"].fatex__header__refresh__input {
+  color: #ffffff;
+  height: 32px;
+  font-size: 24px;
+}
+.fatex__header input[type="text"].fatex__header__fp__input,
+.fatex__header input[type="text"].fatex__header__refresh__input {
+  width: 40px;
+  text-align: center;
+}
+
+.fatex__header__name {
+  padding: 10px;
+  display: flex;
+  flex-direction: column-reverse;
+}
+
+.fatex__header__fate-points {
+  display: flex;
+  padding: 10px;
+  flex-direction: column-reverse;
+}
+
+.fatex__header__label {
+  text-transform: uppercase;
+  font-size: 10px;
+  font-weight: 300;
+  letter-spacing: 3px;
+  color: #ffffff;
+  padding-left: 5px;
+  padding-top: 3px;
+}
+
+.fatex__header__label--center {
+  padding-left: 0;
+}
+
+.fatex__header__fate-points__wrapper {
+  display: flex;
+  justify-content: center;
+}
+
+.fatex__header__fatepoint_divider {
+  font-size: 32px;
+  color: #ffffff;
+  line-height: 32px;
+}
+
+.fatex__header__logo {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: calc(10px - 2px);
+  text-align: right;
+}
+
+.fatex__header__logo__image {
+  display: inline;
+  height: 40px;
 }
 
 /*# sourceMappingURL=fatex.css.map */
