--- a/system/templates/actors/parts/artwork.html
+++ b/system/templates/actors/parts/artwork.html
@@ -1,10 +1,10 @@
 <style>
-    .fatex-artwork--image {
+    .fatex__artwork--image {
         background-image: url("{{actor.img}}");
     }
 </style>
 
-<div class="fatex-artwork">
-    <div class="fatex-artwork--image" title="{{actor.name}}"></div>
-    <img class="fatex-artwork--handler" alt="{{actor.name}}" data-edit="img" src="{{actor.img}}"/>
+<div class="fatex__artwork">
+    <div class="fatex__artwork--image" title="{{actor.name}}"></div>
+    <img class="fatex__artwork--handler" alt="{{actor.name}}" data-edit="img" src="{{actor.img}}"/>
 </div>
