Renamed font file

--- a/style/fonts.scss
+++ b/style/fonts.scss
@@ -43,5 +43,5 @@
 
 @font-face {
     font-family: 'Fate Core';
-    src: url('assets/fonts/Fate Core Font.ttf');
+    src: url('assets/fonts/fate_core.ttf');
 }
