--- a/system/fatex.css
+++ b/system/fatex.css
@@ -42,7 +42,7 @@
 }
 @font-face {
   font-family: 'Fate Core';
-  src: url("assets/fonts/Fate Core Font.ttf");
+  src: url("assets/fonts/fate_core.ttf");
 }
 .desk {
   display: grid;
