--- a/system/templates/actors/parts/stress.html
+++ b/system/templates/actors/parts/stress.html
@@ -2,39 +2,39 @@
     <div class="fatex__stress__track">
         <h2 class="fatex__stress__track__headline">
             Physical stress
-            <i class="fatex__stress__track__headline__settings fas fa-cog"></i>
+            <span class="fatex__stress__track__headline__settings"></span>
         </h2>
 
         <div class="fatex__stress__track__items">
             <div class="fatex__stress__track__item">
-                <span class="fatex__stress__track__item__label">1</span>
                 <label class="fatex__stress__track__item__box">
+                    <span class="fatex__stress__track__item__label">1</span>
                     <input class="fatex__stress__track__item__checkbox" type="checkbox" name="">
-                    <i class="fatex__stress__track__item__icon fas fa-check"></i>
+                    <span class="fatex__stress__track__item__icon"></span>
                 </label>
             </div>
 
             <div class="fatex__stress__track__item">
-                <span class="fatex__stress__track__item__label">1</span>
                 <label class="fatex__stress__track__item__box">
+                    <span class="fatex__stress__track__item__label">2</span>
                     <input class="fatex__stress__track__item__checkbox" type="checkbox" name="">
-                    <i class="fatex__stress__track__item__icon fas fa-check"></i>
+                    <span class="fatex__stress__track__item__icon"></span>
                 </label>
             </div>
 
             <div class="fatex__stress__track__item">
-                <span class="fatex__stress__track__item__label">1</span>
                 <label class="fatex__stress__track__item__box">
+                    <span class="fatex__stress__track__item__label">3</span>
                     <input class="fatex__stress__track__item__checkbox" type="checkbox" name="">
-                    <i class="fatex__stress__track__item__icon fas fa-check"></i>
+                    <span class="fatex__stress__track__item__icon"></span>
                 </label>
             </div>
 
             <div class="fatex__stress__track__item">
-                <span class="fatex__stress__track__item__label">1</span>
                 <label class="fatex__stress__track__item__box">
+                    <span class="fatex__stress__track__item__label">4</span>
                     <input class="fatex__stress__track__item__checkbox" type="checkbox" name="">
-                    <i class="fatex__stress__track__item__icon fas fa-check"></i>
+                    <span class="fatex__stress__track__item__icon"></span>
                 </label>
             </div>
         </div>
@@ -43,18 +43,112 @@
     <div class="fatex__stress__track">
         <h2 class="fatex__stress__track__headline">
             Stress track with lots of text
-            <i class="fatex__stress__track__headline__settings fas fa-cog"></i>
+            <span class="fatex__stress__track__headline__settings"></span>
         </h2>
+
+        <div class="fatex__stress__track__items fatex__stress__track__items__break">
+            <div class="fatex__stress__track__item">
+                <label class="fatex__stress__track__item__box">
+                    <span class="fatex__stress__track__item__label">1</span>
+                    <input class="fatex__stress__track__item__checkbox" type="checkbox" name="">
+                    <span class="fatex__stress__track__item__icon"></span>
+                </label>
+            </div>
+
+            <div class="fatex__stress__track__item">
+                <label class="fatex__stress__track__item__box">
+                    <span class="fatex__stress__track__item__label">2</span>
+                    <input class="fatex__stress__track__item__checkbox" type="checkbox" name="">
+                    <span class="fatex__stress__track__item__icon"></span>
+                </label>
+            </div>
+
+            <div class="fatex__stress__track__item">
+                <label class="fatex__stress__track__item__box">
+                    <span class="fatex__stress__track__item__label">3</span>
+                    <input class="fatex__stress__track__item__checkbox" type="checkbox" name="">
+                    <span class="fatex__stress__track__item__icon"></span>
+                </label>
+            </div>
+
+            <div class="fatex__stress__track__item">
+                <label class="fatex__stress__track__item__box">
+                    <span class="fatex__stress__track__item__label">4</span>
+                    <input class="fatex__stress__track__item__checkbox" type="checkbox" name="">
+                    <span class="fatex__stress__track__item__icon"></span>
+                </label>
+            </div>
+
+            <div class="fatex__stress__track__break"></div>
+
+            <div class="fatex__stress__track__item">
+                <label class="fatex__stress__track__item__box">
+                    <span class="fatex__stress__track__item__label">5</span>
+                    <input class="fatex__stress__track__item__checkbox" type="checkbox" name="">
+                    <span class="fatex__stress__track__item__icon"></span>
+                </label>
+            </div>
+
+            <div class="fatex__stress__track__item">
+                <label class="fatex__stress__track__item__box">
+                    <span class="fatex__stress__track__item__label">6</span>
+                    <input class="fatex__stress__track__item__checkbox" type="checkbox" name="">
+                    <span class="fatex__stress__track__item__icon"></span>
+                </label>
+            </div>
+
+            <div class="fatex__stress__track__item">
+                <label class="fatex__stress__track__item__box">
+                    <span class="fatex__stress__track__item__label">7</span>
+                    <input class="fatex__stress__track__item__checkbox" type="checkbox" name="">
+                    <span class="fatex__stress__track__item__icon"></span>
+                </label>
+            </div>
+
+            <div class="fatex__stress__track__item">
+                <label class="fatex__stress__track__item__box">
+                    <span class="fatex__stress__track__item__label">8</span>
+                    <input class="fatex__stress__track__item__checkbox" type="checkbox" name="">
+                    <span class="fatex__stress__track__item__icon"></span>
+                </label>
+            </div>
+        </div>
     </div>
 
     <div class="fatex__stress__track">
         <h2 class="fatex__stress__track__headline">
-            Indepted
-            <i class="fatex__stress__track__headline__settings fas fa-cog"></i>
+            Indebted
+            <span class="fatex__stress__track__headline__settings"></span>
         </h2>
 
-        <div class="fatex__stress__track__boxes">
+        <div class="fatex__stress__track__items">
+            <div class="fatex__stress__track__item">
+                <label class="fatex__stress__track__item__box">
+                    <input class="fatex__stress__track__item__checkbox" type="checkbox" name="">
+                    <span class="fatex__stress__track__item__icon"></span>
+                </label>
+            </div>
 
+            <div class="fatex__stress__track__item">
+                <label class="fatex__stress__track__item__box">
+                    <input class="fatex__stress__track__item__checkbox" type="checkbox" name="">
+                    <span class="fatex__stress__track__item__icon"></span>
+                </label>
+            </div>
+
+            <div class="fatex__stress__track__item">
+                <label class="fatex__stress__track__item__box">
+                    <input class="fatex__stress__track__item__checkbox" type="checkbox" name="">
+                    <span class="fatex__stress__track__item__icon"></span>
+                </label>
+            </div>
+
+            <div class="fatex__stress__track__item">
+                <label class="fatex__stress__track__item__box">
+                    <input class="fatex__stress__track__item__checkbox" type="checkbox" name="">
+                    <span class="fatex__stress__track__item__icon"></span>
+                </label>
+            </div>
         </div>
     </div>
 </div>
