--- a/style/components/stress/stress.scss
+++ b/style/components/stress/stress.scss
@@ -12,6 +12,9 @@
     padding: 5px 30px 5px 20px;
     @include cutoff(15px);
     position: relative;
+    font-weight: bold;
+    text-transform: uppercase;
+    font-size: 17px;
 
     &:hover {
         .fatex__stress__track__headline__settings {
@@ -21,6 +24,8 @@
 }
 
 .fatex__stress__track__headline__settings {
+    @include fa-icon($fa-var-cog);
+
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
@@ -33,11 +38,59 @@
 .fatex__stress__track__item__checkbox {
     position: absolute;
     opacity: 0;
-    right: -5000px;
+    left: -5000px;
+
+    &:checked + .fatex__stress__track__item__icon{
+        opacity: 1;
+    }
+}
+
+.fatex__stress__track__items {
+    display: flex;
+    justify-content: space-evenly;
+    margin-top: 15px;
+}
+
+.fatex__stress__track__items__break {
+    flex-wrap: wrap;
 }
 
 .fatex__stress__track__item__box {
+    position: relative;
     width: 30px;
     height: 30px;
-    border: 5px solid $headline-background;
+    border: 2px solid $headline-background;
+    margin: 0 8px 15px;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.fatex__stress__track__item {
+    position: relative;
+}
+
+.fatex__stress__track__break {
+    width: 100%;
+}
+
+.fatex__stress__track__item__label {
+    position: absolute;
+    left: 0;
+    top: 0;
+
+    transform: translate(-60%, -40%);
+    font-weight: 900;
+    font-size: 24px;
+    color: $headline-background;
+}
+
+.fatex__stress__track__item__icon {
+    width: 100%;
+    text-align: center;
+    font-size: 25px;
+    opacity: 0;
+
+    @include fa-icon($fa-var-times);
 }
